# logger-rust

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: publish-image.yml
src/: config.rs  main.rs
