[package]
name = "logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
mongodb = "2.8.2"
tokio = { version = "1.0", features = ["macros", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
once_cell = "1.19.0"
